--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<p><i>If you are enquiring about a specific event or service, please provide as much information as possible about the date and location, as well as any music choices you have made. General enquiries are also welcome.</i></p>
-								<form method="POST">
+								<form id="contactform" method="POST">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
