Updated funerals article
Corrected spelling ("sought" corrected to "sort")

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<!-- funerals -->
 							<article id="funerals">
 								<h2 class="major">Funerals</h2>
-								<p>Music is always important at funerals. The right music can help make a funeral just the sought of loving occasion your loved one would want.</p>
+								<p>Music is always important at funerals. The right music can help make a funeral just the sort of loving occasion your loved one would want.</p>
 								<p>In the past, Helen has helped people track down a favourite piece or hymn that really helps call that special person to mind. Previous hymn requests have included <i>May is the Month of Mary</i>, <i>The Sun is Shining Brightly</i>, and <i>You Raise Me Up.</i></p>
 								<p>Sometimes extended family and friends may not know some of the hymns or music for a funeral service. Having an organist who can also lead the congregation in singing can be a real benefit. Helen has extensive experience of singing from the organ, with or without a microphone as needs be.</p> 
 								<p>As a trained cantor, Helen can lead the singing of any psalm you choose to go with your selected readings, from old favourites like <i>The Lord's My Shepherd</i>, to modern classics like <i>On Eagles' Wings</i>, as well as more unusual choices.</p>
