--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<div class="inner">
 								<h1>Welcome</h1>
 								<p>Helen is an organist and mezzo-soprano playing and singing in churches <br>in and around the Greater Glasgow and Renfrewshire area.<p/>
-								<p>She can be heard every weekend at St Andrew's Metropolitan Cathedral <br>and the church of St Alphonsus in Glasgow.<p/>
+								<p>She can be heard every weekend at St Andrew's Metropolitan Cathedral <br>and the church of St Fergus in Paisley.<p/>
 								<p>She is available to sing or play for weddings, funerals <br>and all other church services.</p>
 							</div>
 						</div>
@@ -55,7 +55,7 @@
 						<!-- funerals -->
 							<article id="funerals">
 								<h2 class="major">Funerals</h2>
-								<p>Music is always important at funerals. The right music can help make a funeral just the sort of loving occasion your loved one would want.</p>
+								<p>Music is always important at funerals. The right music can help make a funeral just the sought of loving occasion your loved one would want.</p>
 								<p>In the past, Helen has helped people track down a favourite piece or hymn that really helps call that special person to mind. Previous hymn requests have included <i>May is the Month of Mary</i>, <i>The Sun is Shining Brightly</i>, and <i>You Raise Me Up.</i></p>
 								<p>Sometimes extended family and friends may not know some of the hymns or music for a funeral service. Having an organist who can also lead the congregation in singing can be a real benefit. Helen has extensive experience of singing from the organ, with or without a microphone as needs be.</p> 
 								<p>As a trained cantor, Helen can lead the singing of any psalm you choose to go with your selected readings, from old favourites like <i>The Lord's My Shepherd</i>, to modern classics like <i>On Eagles' Wings</i>, as well as more unusual choices.</p>
@@ -65,8 +65,8 @@
 						<!-- masses -->
 							<article id="masses">
 								<h2 class="major">Regular Engagements <br>and other Services</h2>
-								<p>Helen Alexander is the Director of Music at St Alphonsus in Calton <br>and an organist at St Andrew's Metropolitan Cathedral.</p>
-								<p>Helen currently has vacancies for regular engagements on Saturday and Sunday evening, early on Sunday morning, and any weekday. She can travel anywhere in the Glasgow, Motherwell and Paisley dioceses. Engagements for one-off services and deputisations for other organists are also welcome.</p>
+								<p>Helen Alexander is the Director of Music at St Fergus in Paisley <br>and an organist at St Andrew's Metropolitan Cathedral.</p>
+								<p>Helen currently has vacancies for regular engagements on Saturday and Sunday evening, and any weekday. She can travel anywhere in the Glasgow, Motherwell and Paisley dioceses. Engagements for one-off services and deputisations for other organists are also welcome.</p>
 								<p>CV and references can be provided on request. Helen is a member of the PVG scheme.</p>
 								<p>To ask Helen about an engagement or to make a general enquiry, <a href="#contact">contact Helen here.</a></p>
 							</article>
@@ -85,6 +85,7 @@
 										<input type="text" name="_replyto" id="email" />
 										<input type="hidden" name="_subject" value="Website contact" />
 										<input type="text" name="_gotcha" style="display:none" />
+										
 									</div>
 									<div class="field">
 										<label for="message">Message</label>
