--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 							<ul>
 								<li><a href="#weddings">Weddings</a></li>
 								<li><a href="#funerals">Funerals</a></li>
+								<li><a href="#media">Media</a></li>
+								<li><a href="#covid-19">Covid-19</a></li>
 								<li><a href="#masses"> Services</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -60,6 +62,27 @@
 								<p>Sometimes extended family and friends may not know some of the hymns or music for a funeral service. Having an organist who can also lead the congregation in singing can be a real benefit. Helen has extensive experience of singing from the organ, with or without a microphone as needs be.</p> 
 								<p>As a trained cantor, Helen can lead the singing of any psalm you choose to go with your selected readings, from old favourites like <i>The Lord's My Shepherd</i>, to modern classics like <i>On Eagles' Wings</i>, as well as more unusual choices.</p>
 								<p>To make a booking or a general enquiry about funerals, <a href="#contact">contact Helen here.</a></p>
+							</article>
+						
+						<!-- media -->
+							<article id="media">
+								<h2 class="major">Media</h2>
+								<p>Here are some links to recordings of me singing and playing.</p>
+								<p><a href="https://youtu.be/R2OaHqr_cRw" Praise to the Lord, the Almighty<a/><p/>
+								<p><a href="https://youtu.be/i26KvlMojN4" I am the Bread of Life<a/><p/>
+								<p><a href="#contact">Contact Helen here.</a></p>
+							</article>
+						
+						<!-- covid-19 -->
+							<article id="covid-19">
+								<h2 class="major">Media</h2>
+								<p>During the lockdown, with the churches closed, many people are unable to attend church. Several churches have setup livestreams of their services, but unfortunately many of these are without music.</p>
+								<p>I have uploaded two videos of hymns, with subtitles, for Sunday 29th March 2020, and I intend to continue adding hymns for each Sunday during the lockdown.
+								<p>The hymns are accessible via my public youtube channel:
+								<p><a href="https://youtu.be/R2OaHqr_cRw" Praise to the Lord, the Almighty<a/><p/>
+								<p><a href="https://youtu.be/i26KvlMojN4" I am the Bread of Life<a/><p/>
+								<p>If any church would like to link to my videos from their website, I would be delighted. If I can be of any help with providing music remotely during the shutdown, please do <a href="#contact">contact me.<a/> <p/>
+								<p>If anyone has a suggestion for a hymn they would like me to upload during the shutdown, please <a href="#contact">contact me here.</a></p>
 							</article>
 
 						<!-- masses -->
