--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
 							<article id="media">
 								<h2 class="major">Media</h2>
 								<p>Here are some links to recordings of me singing and playing.</p>
-								<p><a href="https://youtu.be/R2OaHqr_cRw"> Praise to the Lord, the Almighty<a/><p/>
-								<p><a href="https://youtu.be/i26KvlMojN4"> I am the Bread of Life<a/><p/>
+								<p><a href="https://youtu.be/R2OaHqr_cRw">Praise to the Lord, the Almighty<a/><p/>
+								<p><a href="https://youtu.be/i26KvlMojN4">I am the Bread of Life<a/><p/>
 								<p><a href="#contact">Contact Helen here.</a></p>
 							</article>
 						
 						<!-- covid-19 -->
 							<article id="covid-19">
-								<h2 class="major">Media</h2>
+								<h2 class="major">Covid-19 Lockdown</h2>
 								<p>During the lockdown, with the churches closed, many people are unable to attend church. Several churches have setup livestreams of their services, but unfortunately many of these are without music.</p>
 								<p>I have uploaded two videos of hymns, with subtitles, for Sunday 29th March 2020, and I intend to continue adding hymns for each Sunday during the lockdown.
 								<p>The hymns are accessible via my public youtube channel:
-								<p><a href="https://youtu.be/R2OaHqr_cRw"> Praise to the Lord, the Almighty</a><p/>
-								<p><a href="https://youtu.be/i26KvlMojN4"> I am the Bread of Life</a><p/>
+								<p><a href="https://youtu.be/R2OaHqr_cRw">Praise to the Lord, the Almighty</a><p/>
+								<p><a href="https://youtu.be/i26KvlMojN4">I am the Bread of Life</a><p/>
 								<p>If any church would like to link to my videos from their website, I would be delighted. If I can be of any help with providing music remotely during the shutdown, please do <a href="#contact">contact me.<a/><p/>
 								<p>If anyone has a suggestion for a hymn they would like me to upload during the shutdown, please <a href="#contact">contact me here.</a></p>
 							</article>
